AUTOMAKE_OPTIONS = 1.9

sysconfdir = $(E2X_CONFIG_PATH)

dist_sysconf_DATA = \
  3.4/index.ini \
  3.4/index.tmpl \
  3.4/xnparticle.ini \
  3.4/xnparticle.tmpl \
  3.4/xnpbook.ini \
  3.4/xnpbook.tmpl \
  3.4/xnpconference.ini \
  3.4/xnpconference.tmpl \
  3.4/xnpdata.ini \
  3.4/xnpdata.tmpl \
  3.4/xnpfiles.ini \
  3.4/xnpfiles.tmpl \
  3.4/xnpmemo.ini \
  3.4/xnpmemo.tmpl \
  3.4/xnpmodel.ini \
  3.4/xnpmodel.tmpl \
  3.4/xnppaper.ini \
  3.4/xnppaper.tmpl \
  3.4/xnppresentation.ini \
  3.4/xnppresentation.tmpl \
  3.4/xnpsimulator.ini \
  3.4/xnpsimulator.tmpl \
  3.4/xnpstimulus.ini \
  3.4/xnpstimulus.tmpl \
  3.4/xnptool.ini \
  3.4/xnptool.tmpl \
  3.4/xnpurl.ini \
  3.4/xnpurl.tmpl
  
  dist_sysconf_DATA2 = \
  4.0/article.ini \
  4.0/article.tmpl \
  4.0/binder.ini \
  4.0/binder.tmpl \
  4.0/book.ini \
  4.0/book.tmpl \
  4.0/conference.ini \
  4.0/conference.tmpl \
  4.0/data.ini \
  4.0/data.tmpl \
  4.0/file.ini \
  4.0/file.tmpl \
  4.0/memo.ini \
  4.0/memo.tmpl \
  4.0/model.ini \
  4.0/model.tmpl \
  4.0/paper.ini \
  4.0/paper.tmpl \
  4.0/presentation.ini \
  4.0/presentation.tmpl \
  4.0/simulator.ini \
  4.0/simulator.tmpl \
  4.0/stimulus.ini \
  4.0/stimulus.tmpl \
  4.0/tool.ini \
  4.0/tool.tmpl \
  4.0/url.ini \
  4.0/url.tmpl
