AUTOMAKE_OPTIONS = 1.9

SUBDIRS = data

datadir = @datadir@/doc/@PACKAGE@/sample

dist_data_DATA = \
  SAMPLE_ja.txt \
  all1.xls \
  all2.xls \
  index.xls \
  xnparticle.xls \
  xnpbook.xls \
  xnpconference.xls \
  xnpdata.xls \
  xnpfiles.xls \
  xnpmemo.xls \
  xnpmodel.xls \
  xnppaper.xls \
  xnppresentation.xls \
  xnpsimulator.xls \
  xnpstimulus.xls \
  xnptool.xls \
  xnpurl.xls \
  all1_v40.xls \
  all2_v40.xls \
  article.xls \
  binder.xls \
  book.xls \
  conference.xls \
  data.xls \
  file.xls \
  memo.xls \
  model.xls \
  paper.xls \
  presentation.xls \
  simulator.xls \
  stimulus.xls \
  tool.xls \
  url.xls
