AUTOMAKE_OPTIONS = 1.9

sysconfdir = $(E2X_CONFIG_PATH)/3.4

dist_sysconf_DATA = \
  index.ini \
  index.tmpl \
  xnparticle.ini \
  xnparticle.tmpl \
  xnpbook.ini \
  xnpbook.tmpl \
  xnpconference.ini \
  xnpconference.tmpl \
  xnpdata.ini \
  xnpdata.tmpl \
  xnpfiles.ini \
  xnpfiles.tmpl \
  xnpmemo.ini \
  xnpmemo.tmpl \
  xnpmodel.ini \
  xnpmodel.tmpl \
  xnppaper.ini \
  xnppaper.tmpl \
  xnppresentation.ini \
  xnppresentation.tmpl \
  xnpsimulator.ini \
  xnpsimulator.tmpl \
  xnpstimulus.ini \
  xnpstimulus.tmpl \
  xnptool.ini \
  xnptool.tmpl \
  xnpurl.ini \
  xnpurl.tmpl
