AUTOMAKE_OPTIONS = 1.9

sysconfdir = $(E2X_CONFIG_PATH)/4.0

dist_sysconf_DATA = \
  article.ini \
  article.tmpl \
  binder.ini \
  binder.tmpl \
  book.ini \
  book.tmpl \
  conference.ini \
  conference.tmpl \
  data.ini \
  data.tmpl \
  file.ini \
  file.tmpl \
  memo.ini \
  memo.tmpl \
  model.ini \
  model.tmpl \
  paper.ini \
  paper.tmpl \
  presentation.ini \
  presentation.tmpl \
  simulator.ini \
  simulator.tmpl \
  stimulus.ini \
  stimulus.tmpl \
  tool.ini \
  tool.tmpl \
  url.ini \
  url.tmpl
